[build-system]
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_pbt"
version = "0.0.1"
description = "Jax-based population-based training for reinforcement learning"
authors = [
    {name = "yourname", email = "youremail@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.10"
keywords = ["jax", "reinforcement learning", "multi-agent system", "large-scale training", "population-based training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Cython",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
py-modules = ["jax_pbt"]
